# single-cell-tools

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: app.py  background_jobs.py  benchmark.py  env_bootstrap.py  gradio_config.py  preprocess.py  scfm_compatibility.py  scfm_model_paths.py  session_results.py  slurm_defaults.py  slurm_gpu.py
models/: README.md
scripts/: dataset_sources.py  densify_h5ad_worker.py  download_scgpt_weights.sh  download_weights.py  generate_embeddings.py  make_plots.py  make_toy.py  run_benchmark_slurm_job.py  run_scfm_embedding_job.py  submit_scfm_embedding_slurm.py
